# strfry-plugin

./: .gitignore  README.md  collector.py  pyproject.toml  spamfilter.py
src/: bitcoinersocial.py  spamfilter_and_metrics.py  spamfilter_only.py
